feat: modernize Java 8-era library stacks across the phased migration
The JDK stages could not actually land: Spring 3.x/4.x, Hibernate 3/4,
cglib and javassist bundle an ASM that refuses newer class files, so the
app failed at context startup rather than at compile time. Each JDK stage
now owns the framework floor its release requires.

- Stage 3 (Java 17) raises plain Spring 3.x/4.x to 5.3.x (still javax) and
  rewrites orm.hibernate3 onto hibernate5; stage 6 (Java 25) carries a
  plain Spring 5.3 app to 6.x, which forces the Jakarta rename there.
- Stage 1 modernizes the test stack first (Mockito 1.x to mockito-core
  4.11.0, JUnit 4.13.2, surefire/failsafe 3.2.5+) as the migration's
  safety net -- the one place a dependency version changes in Phase 1.
- New legacy-library-modernization.md reference covers each Java 8-era
  stack as an API rewrite, not a version bump: Hibernate Interceptor SPI,
  Jackson 1 to 2 to 3, Ehcache 2 with its Spring/Hibernate/web
  integrations, log4j 1.2, google-collections to newest Guava, spring-mock.
- Fixer gains the runtime failure signatures (Unsupported class file major
  version, InaccessibleObjectException) with the rule that --add-opens is
  never the fix; reporters always list JUnit 3/4 and the other deprecated
  libraries, even when a toggle keeps them out of scope.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>